--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "auto-insta-eight",
   "version": "1.0.0",
+  "private": true,
+  "type": "module",
   "dependencies": {
-    "@vercel/blob": "^0.23.0"
+    "@vercel/blob": "latest"
   }
 }
