--- a/package.json
+++ b/package.json
@@ -1,9 +1,16 @@
 {
-  "name": "auto-insta-eight",
+  "name": "auto-insta",
   "version": "1.0.0",
   "private": true,
-  "type": "module",
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
+  },
   "dependencies": {
-    "@vercel/blob": "latest"
+    "next": "14.1.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "@vercel/blob": "^0.23.0"
   }
 }
